[gd_scene load_steps=7 format=2]

[ext_resource path="res://Textures/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemys/EBullet.gd" type="Script" id=2]
[ext_resource path="res://Textures/Things/Bullet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 4, 0, 1, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0, 0 )

[node name="EBullet" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="." groups=[
"Damage",
"Enemy_bullet",
]]
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Area2D"]
modulate = Color( 0.85098, 0.435294, 0.435294, 1 )
position = Vector2( -9.53674e-07, 0 )
scale = Vector2( 8.25, 8.25 )
texture = SubResource( 1 )
region_rect = Rect2( 3, 0, 3, 5 )

[node name="Sprite2" type="Sprite" parent="Area2D"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 2.3625, 1.375 )
texture = ExtResource( 3 )
region_rect = Rect2( 3, 0, 3, 5 )

[node name="Sprite3" type="Sprite" parent="Area2D"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 2.98023e-08, 0 )
scale = Vector2( 3.3, 1.7 )
texture = ExtResource( 3 )
region_rect = Rect2( 3, 0, 3, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="TimerDie" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="TimerDie" to="." method="_on_TimerDie_timeout"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
